FDS-145. Vert alignment issue fix on Firefox.

--- a/src/components/organisms/horizontal-image-slider/_horizontal-image-slider.scss
+++ b/src/components/organisms/horizontal-image-slider/_horizontal-image-slider.scss
@@ -91,7 +91,7 @@ Styleguide COMPONENTS.horizontal-image-slider
 
     .toggle-caption {
       display: none;
-
+      font-size: 15px;
       @include breakpoint(medium) {
         display: inline-block;
       }
